TAG: webshare-4-3-0-2
DATE: 07/27/2009
STAFF: jsb
CHANGES: removed underlines from a.genoLink; fixed GlobalConfig.dev

TAG: webshare-4-3-0-1
DATE: 07/15/2009
STAFF: jsb
CHANGES: merged tr7493 branch into trunk

TAG: webshare-tr9164-BP
DATE: 05/29/2009
STAFF: pf
CHANGES: branch point for CRE release (TR9164)

TAG: webshare-tr7493-3
DATE: 06/01/2009
STAFF: jsb
CHANGES:
1) Further development for GTLF dev build

TAG: webshare-tr7493-2
DATE: 05/29/2009
STAFF:   mhall
CHANGES:
1) Quick bug fixes for dev build.

TAG: webshare-tr7493-1
DATE: 05/27/2009
STAFF:   jsb
CHANGES: 
1) tag for dev build for gene trap LF release

TAG: webshare-tr7493-BP
DATE: 05/27/2009
STAFF:   jsb
CHANGES: 
1) branch point for gene trap LF (TR7493) release

TAG: webshare-4-2-2-4
DATE: 05/12/2009
STAFF:   mhall
CHANGES: Fixed some small template related issue found during the alpha
build. 

TAG: webshare-4-2-2-3
DATE: 05/01/2009
STAFF: mhall
CHANGES: Merged to the trunk, Alpha Build tag.

TAG: webshare-4-2-2-2
DATE: 04/28/2009
STAFF: mhall
CHANGES: Test build tag for TR 9592

TAG: webshare-4-2-2-1
DATE: 04/28/2009
STAFF: mhall
CHANGES: Test build tag for TR 9592

TAG: webshare-4-2-2-0
DATE: 04/28/2009
STAFF: mhall
CHANGES: Test build tag for TR 9592

TAG: webshare-tr9592-BP
DATE: 04/15/2009
STAFF: mhall
RELEASE: branch point
CHANGES:
1) branch point for tr9592

TAG: webshare-4-2-1-1
DATE: 03/16/2009
STAFF: marka
CHANGES: merging tr9440 to trunk

TAG: webshare-tr9440-BP
DATE: 01/20/2009
STAFF: marka
RELEASE: branch point
CHANGES:
1) branch point for tr9440

TAG: webshare-4-2-0-x (1 -> 5)
DATE: 12/3/2008
STAFF: marka/pf
CHANGES: 
1) merging branch tr9329 to trunk
2) dev/alpha build tags

TAG: webshare-tr9329-x (1 -> 3)
DATE: 12/1/2008
STAFF: marka/pf
CHANGES: search tool dev build

TAG: webshare-tr9329-BP
DATE: 10/28/2008
STAFF: marka
RELEASE: branch point
CHANGES:
1) branch point for searchtool release

TAG: webshare-4-1-2-4
DATE: 09/18/2008
STAFF: jsb
CHANGES: