@@ -28,6 +28,7 @@ select {color:#000000;font-family:Verdana,Arial,Helvetica;font-size:11px}
 
 .pageTitle {font-size:20px;font-family:Arial,Helvetica;vertical-align:middle;color:#000001;font-weight:bold;text-align:center;background-color:#D0E0F0}
 .label {font-size:12px;font-family:Arial,Helvetica;text-align:right;color:#000001;font-weight:bold;}
+.smallLabel {font-size:11px;font-family:Arial,Helvetica;text-align:right;color:#000001;font-weight:bold;}
 .qfLabel {font-size:12px;font-family:Arial,Helvetica;color:#000001;font-weight:bold;}
 td.headerLabel {font-size:12px;font-family:Arial,Helvetica;vertical-align:top;text-align:right;color:#000001;font-weight:bold;vertical-align:middle;text-align:center;background-color:#dddddd}
 td.headerLabelSmall {font-size:9px;font-family:Arial,Helvetica;vertical-align:top;text-align:right;color:#000001;font-weight:bold;vertical-align:middle;text-align:center;width:50px;background-color:#dddddd}
@@ -84,12 +85,14 @@ td.rightMiddle {vertical-align:middle;text-align:right}
 td.centerMiddle {vertical-align:middle;text-align:center}
 td.leftMiddle {vertical-align:middle;text-align:left}
 td.hilite {background-color:#FDFDDD}
+
 .enhance {font-size:14px;font-weight:bold;vertical-align:middle}
 .error {color:red}
 .example {font-size:10px;font-weight:normal;font-style:italic;}
 .grayBackground {background-color:#eeeeee;}
 .nowrap {white-space: nowrap;} 
 .larger {font-size:14px;font-weight:bold}
+.bold {font-weight:bold}
 .normal {font-size:14px;font-weight:normal}
 .vocabLink {font-family:Verdana, Arial, Helvetica, sans-serif; font-size:11px; color:#000000}
 
@@ -98,6 +101,7 @@ td.hilite {background-color:#FDFDDD}
 .spaced {line-height:135%}
 .rightBorderThinGray { border-right: 1px solid rgb(168, 168, 168); }
 .leftBorderThinGray { border-left: 1px solid rgb(168, 168, 168); } 
+.italic {font-style:italic;}
 
 /*  ToolBar / Main Data Seperator */
 td.separator {background-color:#888888;width:1px} 
@@ -211,9 +215,9 @@ dl.linkedList { margin-left: 2em; }
     font-style:italic}
 
 .tiny { font-weight:normal;
-	font-size:x-small; 
-	color:#333333; 
-	line-height:8px; }
+    font-size:x-small; 
+    color:#333333; 
+    line-height:8px; }
 
 .smaller { font-size:9px; font-weight:normal; }
 
@@ -229,43 +233,43 @@ a.genoLink:link {color:#0000FF;text-decoration:none}
 a.genoLink:active {color:#0000FF;text-decoration:none}
 a.genoLink:visited {color:#6600FF;text-decoration:none}
 a.genoLink:hover {color:#CC0000;text-decoration:none;
-	background-color:#c7e3fe}
+    background-color:#c7e3fe}
 
 .rightBorder { border-right-color: #D0E0F0;
-	border-right-style:solid;
-	border-right-width:1px; }
+    border-right-style:solid;
+    border-right-width:1px; }
 
 .topBorder { border-top-color: #D0E0F0;
-	border-top-style:solid;
-	border-top-width:1px; }
+    border-top-style:solid;
+    border-top-width:1px; }
 
 .bottomBorder { border-bottom-color: #D0E0F0;
-	border-bottom-style:solid;
-	border-bottom-width:1px; }
+    border-bottom-style:solid;
+    border-bottom-width:1px; }
 
 .leftBorder { border-left-color :#CCCCCC; 
-	border-left-style:solid;
-	border-left-width:1px; }
+    border-left-style:solid;
+    border-left-width:1px; }
 
 .topBorderDark { border-top-color: gray;
-	border-top-style:solid;
-	border-top-width:1px; }
+    border-top-style:solid;
+    border-top-width:1px; }
 
 .bottomBorderDark { border-bottom-color: gray;
-	border-bottom-style:solid;
-	border-bottom-width:0.5pt; }
+    border-bottom-style:solid;
+    border-bottom-width:0.5pt; }
 
 td.noWrap { white-space:nowrap; }
 
 td.noPad { padding-top:0; padding-bottom:2px;
-	padding-left:2px; padding-right:2px; }
+    padding-left:2px; padding-right:2px; }
 
 .captions { display:inline; float:right; width:auto; clear:none; }
 
 .nomen { display:inline; float:left; clear:none; }
 
 .cap { display:block; position:relative; right:5px; text-align:right;
-	clear:both; white-space:nowrap; }
+    clear:both; white-space:nowrap; }
 
 .primeImg { display:inline; float:right; width:auto; clear:none; }
 
