@@ -253,7 +253,7 @@ a.logoFooterAnchor{
     bottom: 0px;
     right: 0px;
     clear: right;
-    width: 67em;
+    width: 68em;
 }
 
 .navtabs span{
